--- a/src/app/fcomponents/user-dashboard/user-dashboard.component.html
+++ b/src/app/fcomponents/user-dashboard/user-dashboard.component.html
@@ -19,6 +19,6 @@
 	</mat-tab-group>
 
 	<div id="buttonsWrap">
-		<button mat-raised-button routerLink='/home'>OK</button>
+		<!-- <button mat-raised-button routerLink='/home'>OK</button> -->
 	</div>
 </div>
