--- a/src/app/fcomponents/basic/user-dialog/userregistration-dialog/userregistration-dialog.component.html
+++ b/src/app/fcomponents/basic/user-dialog/userregistration-dialog/userregistration-dialog.component.html
@@ -56,4 +56,5 @@
 		<p>Already have an account?</p>
 		<button mat-raised-button (click)="loginDialog()" class="primaryButton">Log in now!</button>
 	</div>
+	<!-- <button (click)="abc()">as</button> -->
 </div>
