--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -119,7 +119,7 @@
       <br><br>
       Whether your celebrating a wedding, engagement, birthday, baby shower, corporate gathering or any other special event, we’re here to make it a unique day to remember.
       <br><br>
-      Our professional services include: <span style="font-family: 'LuxeDream'">Prop Hire, Event Styling & Floral Decoration</span>. 
+      Our professional services include: <span style="font-family: 'LuxeDream'">Floral Decoration, Prop Hire & Event Styling </span>. 
     <br>
       <a class="getintouch" style="color:#c48f45" href="" routerLink="/contactUs">Get in touch now for a quote</a> !
     </div>
