--- a/src/app/fcomponents/basic/user-dialog/new-user-info-dialog/new-user-info-dialog.component.html
+++ b/src/app/fcomponents/basic/user-dialog/new-user-info-dialog/new-user-info-dialog.component.html
@@ -3,7 +3,7 @@
 	<div id="logowrap">
 		<img src="../../../../assets/images/Asset1-4x-mid.png" alt="logo" width="100px">
 		<hr>
-        <h5 mat-dialog-title>New user information</h5>
+        <h5 mat-dialog-title>{{data}}</h5>
         <br>
         <h5 class="s2">
         <b>Do you have a registered event business?
@@ -15,7 +15,9 @@
         You will receive 20% off all hire items (excluding delivery, decal, chairs,cart,etc.)
         <br><br>
         The only thing we ask in return is you MUST mention and tag us in all your event social media posts which include our items or share the images of the event with our marketing team at info@luxedreameventhire.co.nz
-        </h5>
+            <br><br>
+        Get in touch with us to let us know.
+    </h5>
     </div>
     <br>
     <br>
