--- a/src/app/fcomponents/basic/user-dialog/popup-dialog/popup-dialog.component.html
+++ b/src/app/fcomponents/basic/user-dialog/popup-dialog/popup-dialog.component.html
@@ -20,7 +20,7 @@
 				<input matInput placeholder="How did you find about us?" formControlName="channel">
 			</mat-form-field>
 		</mat-dialog-content>
-		<div style="color:#c48f45">Subscribe to your mailing list now to get 10% off your next order !</div>
+		<div style="color:#c48f45">Subscribe to your mailing list now to get 10% off your first order !</div>
 		<mat-dialog-actions>
 			<div id="ButtonsWrap" class="mb-3">
 				<button mat-raised-button color="basic" mat-dialog-close>Cancel</button>
