--- a/src/app/fcomponents/basic/user-dialog/terms-conditions/terms-conditions.component.html
+++ b/src/app/fcomponents/basic/user-dialog/terms-conditions/terms-conditions.component.html
@@ -122,6 +122,47 @@
 
       <h4>CARE OF ITEMS</h4>
       <br>
+      <h4>LED Light Safety Instructions</h4>
+      Upon full payment and delivery/collection of Luxe Dream Event Hire LED Lights, the customer agrees to follow the following LED Light Safety Instructions.
+      <ol>
+      <li>
+        Please be aware that the LED lights supplied are made of metal. Gloves and safety glasses must be worn at all times when touching the apparatus. This includes any installing or removing of lights and/or other maintenance.
+      Lights must be removed extremely gently to avoid any scratches or damage.
+      </li>
+      <li>
+        Power Sources
+        <ol>
+          <li>
+            ‘LOVE’ LED lights (1.8m high) can be connected directly to a power source of 220v.
+          </li>
+          <li>
+            Letter-shaped LED lights (1m high) must not be connected to a power source of 220v unless attached to a transformer that Luxe Dreams Event Hire provides first.
+          </li>
+          <li>
+            Number-shaped LED lights (1.3m high) must not be connected to a power source of 220v unless attached to a transformer that Luxe Dreams Event Hire provides first.
+          </li>
+        </ol>
+      </li>
+      <li>
+        Precaution must be taken with the LED lights on windy days. Luxe Dreams Event Hire reserves the right to cancel the rental of LED letters should they believe that the item[s] could be damaged from weather conditions and/or dangerous to the customer and his or her guests.
+      </li>
+      <li>
+        LED lights must not be used outdoors if it is raining. Luxe Dreams Event Hire reserves the right to cancel the rental of LED letters should they believe that the item[s] could be damaged from weather conditions and/or dangerous to the customer and his or her guests.
+      </li>
+      <li>
+        Children and/or animals must be supervised at all times around the LED lights, to avoid any unnecessary injury or damage to the lights.
+      </li>
+      <li>
+        Guests should not stand close to or lean on the LED lights, to avoid any unnecessary injury.
+      </li>
+      <li>
+        Photos should not be taken in close proximity to the LED lights to avoid any unnecessary injury.
+      </li>
+      <li>
+        The customer agrees to indemnify and hold Luxe Dream Event Hire harmless for any claims from the customer’s use or misuse of the LED Lights, including any third parties for loss, injury and damage to persons or items/property arising out of the customer’s negligence or operation including legal costs incurred in defence of such claims.
+      </li>
+      </ol>
+    <br>      
       <h5>CLEANING</h5>
       <ol>
         <li>
@@ -129,6 +170,7 @@
         </li>
         <li>All items must be cleaned properly before returning to Luxe Dream Event Hire.</li>
       </ol>
+      <h5></h5>
 
       <h5>SOILED AND/OR DAMAGED ITEMS</h5>
       <ol>
@@ -152,7 +194,11 @@
       <h4>DISCLAIMER</h4>
       This rental agreement forms the sole agreement between the customer and Luxe Dream Event Hire. The customer agrees to indemnify and hold Luxe Dream Event Hire harmless for any claims from the customer’s use or misuse, 
       including any third parties for loss, injury and damage to persons or items/property arising out of the customers negligence or operation including legal costs incurred in defence of such claims.
+      <br>
+    
     </mat-dialog-content>
 </div>
 
 <button mat-raised-button color="basic" style="margin: 0 auto;" mat-dialog-close>ok</button>
+
+
