--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -117,7 +117,7 @@
       <br>
       The <span style="font-family: 'LuxeDream'">luxury</span> of being surrounded by beautiful exclusive floral pieces…
       <br><br>
-      Whether your celebrating a wedding, engagement, birthday, baby shower, corporate gathering or any other special event, we’re here to make it a unique day to remember.
+      Whether you'are celebrating a wedding, engagement, birthday, baby shower, corporate gathering or any other special event, we’re here to make it a unique day to remember.
       <br><br>
       Our professional services include: <span style="font-family: 'LuxeDream'">Floral Decoration, Prop Hire & Event Styling </span>. 
     <br>
