--- a/src/app/fcomponents/shopping-checkout/shopping-cart/shopping-cart.component.html
+++ b/src/app/fcomponents/shopping-checkout/shopping-cart/shopping-cart.component.html
@@ -19,11 +19,12 @@
 </div>
 <!-- <div class="alert alert-danger mt-2 mb-2" role="alert" *ngIf="!isTimeSame && prodsInCart.length!=0">
 	{{errorMessage}}</div> -->
-	<div class="alert alert-danger mt-2 mb-2" role="alert" *ngIf="errorMessage">
+<div class="alert alert-danger mt-2 mb-2" role="alert" *ngIf="errorMessage">
 	{{errorMessage}}</div>
 
 <div class="alert alert-danger mt-2 mb-2" role="alert" *ngIf="isAlert && isShoppingCartValid">
-	Customer service will confirm this order with you. You can get instant confirmation if you choose to hire your prop[s] for pick-up on Fridays and return the following Monday
+	Customer service will confirm this order with you. You can get instant confirmation if you choose to hire your
+	prop[s] for pick-up on Fridays and return the following Monday
 	<!-- Customer Service will confirm this order with you. You can get <span style="font-size: large;">instant
 		confirmation</span> if you book from Friday to Monday. -->
 </div>
@@ -58,7 +59,8 @@
 	<br>
 </div>
 <div class="text-right" *ngIf="totalPrice!=0 &&isShoppingCartValid">
-	<div class="mb-1" *ngIf="showCoupon">Coupon Code : <input #coupon><button class="ml-2" (click)="checkCoupon(coupon)">Apply</button></div>
+	<div class="mb-1" *ngIf="showCoupon">Coupon Code : <input #coupon><button class="ml-2"
+			(click)="checkCoupon(coupon)">Apply</button></div>
 	<mat-error *ngIf="showCouponError">Coupon is not Valid!</mat-error>
 	<!-- <div *ngIf="isCouponValid"><span style="color:green">Coupon is Valid!</span> <button class="ml-2" (click)="cancelCoupon()">Cancel</button></div>
 	<div class="mb-1">
@@ -78,8 +80,44 @@
 	<div class="mb-1">Total Amount <span style="color:red">Due Now</span>: NZ <span class="s2bold">{{amountDue | currency}}</span>
 	</div>
 	<div class="mb-1" style="font-size:x-small;">(15% GST Included)</div> -->
+	<br>
+		<table style="font-size:14px; margin-bottom:0px; float:right; max-width: 290px;" class="table">
+			<tr>
+				<th>Description</th>
+				<th>Price</th>
+			</tr>
+			<tr *ngIf="userDiscount">
+				<td>Total item price(s)</td>
+				<td>{{totalPrice / userDiscount | currency}}</td>
+			</tr>
+			<tr *ngIf="!userDiscount">
+				<td>Total item price(s)</td>
+				<td>{{totalPrice | currency}}</td>
+			</tr>
+			<tr>
+				<td>Bond</td>
+				<td>{{bondFee | currency}}</td>
+			</tr>
+			<tr *ngIf="deliveryControl">
+				<td>Delivery</td>
+				<td>{{deliveryFee | currency}}</td>
+			</tr>
+			<tr style="border-top:2px solid; border-left:2px solid; border-right:2px solid; color:#c48f45;">
+				<td>Deposit due now</td>
+				<td *ngIf="deliveryControl">{{ depositFeeDue + deliveryFee | currency}}</td>
+				<td *ngIf="!deliveryControl">{{depositFeeDue| currency}}</td>
+			</tr>
+			<tr style="border-left:2px solid; border-right:2px solid; color:#c48f45;">
+				<td>Remainder due before pick up</td>
+				<td>{{depositFeeDue + bondFee | currency}}</td>
+			</tr>
+			<tr style="border-bottom:2px solid; border-left:2px solid; border-right:2px solid; color:#c48f45;">
+				<td colspan="2">Bond returned 3 working days after rental items returned</td>
+			</tr>
+		</table>
+	<br><br><br><br><br><br>
 
-	<div *ngIf="userDiscount" class="mb-1">Total item price(s): {{totalPrice / userDiscount | currency}}</div>
+	<!-- <div	<div *ngIf="userDiscount" class="mb-1">Total item price(s): {{totalPrice / userDiscount | currency}}</div>
 	<div *ngIf="!userDiscount" class="mb-1">Total item price(s): <span class="s2bold">{{totalPrice | currency}}</span></div>
 
 	<div class="mb-1"> Bond: <span class="s2bold">{{bondFee | currency}}</span></div>
@@ -87,9 +125,8 @@
 	<div class="mb-1" *ngIf="deliveryControl">Delivery fee due now:  <span class="s2bold">{{deliveryFee | currency}}</span> </div>
 
 	<div class="mb-1">Deposit Due Now: <span class="s2bold">{{depositFeeDue | currency}}</span></div>
-	<div class="mb-1">Remainder due before pick-up date <span class="s2bold">{{depositFeeDue | currency}}</span></div>
-
-
+ class="mb-1">Remainder [bond + remainder rent] due before pick-up  <span class="s2bold">{{depositFeeDue | currency}}</span></div> -->
+	<br><br>
 </div>
 
 <div class="justify-content-end mb-3" *ngIf="prodsInCart.length!=0">
