--- a/src/app/fcomponents/shopping-checkout/shopping-cart/shopping-cart.component.html
+++ b/src/app/fcomponents/shopping-checkout/shopping-cart/shopping-cart.component.html
@@ -112,7 +112,7 @@
 				<td>{{depositFeeDue + bondFee | currency}}</td>
 			</tr>
 			<tr style="border-bottom:2px solid; border-left:2px solid; border-right:2px solid; color:#c48f45;">
-				<td colspan="2">Bond returned 3 working days after rental items returned</td>
+				<td colspan="2">Bond returned 3 working days after rental items returned without damage</td>
 			</tr>
 		</table>
 	<br><br><br><br><br><br>
