--- a/src/app/fcomponents/payment-result/payment-result.component.html
+++ b/src/app/fcomponents/payment-result/payment-result.component.html
@@ -43,4 +43,29 @@
       </div>
     </div>
   </div>
+  <div *ngIf="!isSendSuccess" class="card">
+    <div class="card-header">
+      <h4>Your Payment Status</h4>
+    </div>
+    <div class="card-body bg-light text-center">
+      <span class="text-danger">Payment process exited or failed</span>
+      <div id="buttonsWrap">
+        <i class="fas fa-arrow-right text-danger"></i><button mat-raised-button routerLink='/checkout'>Back to Shopping Cart</button>
+      </div>
+      <div *ngIf="user" id="buttonsWrap">
+        <i class="fas fa-arrow-right text-danger"></i><button mat-raised-button routerLink='/userDashboard'>Check the order in your dashboard </button>
+      </div>
+      <div *ngIf="isAskingStatus">Processing... Please wait...
+        <div class="spinner-border text-info" role="status">
+           <span class="sr-only">Loading...</span>
+        </div>
+     </div>
+      <div *ngIf="expired" style="margin-top:20px" class="alert alert-danger text-center">
+        {{ errorMessage }}
+        <button class="btn btn_gold btn-sm" routerLink="/" type="button">
+          <i class="fas fa-arrow-right"></i>&nbsp;Continue Shopping
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
